Fix button icon alignment

--- a/app/stylesheets/builtin-pages/workspaces.less
+++ b/app/stylesheets/builtin-pages/workspaces.less
@@ -133,10 +133,6 @@ input[type="file"] {
 
       &.buttons {
         line-height: 32px;
-
-        .btn i {
-          margin-left: 3px;
-        }
       }
 
       .btn.remove-workspace {
