--- a/app/stylesheets/components/buttons.less
+++ b/app/stylesheets/components/buttons.less
@@ -35,6 +35,17 @@
 
     &:last-child {
       margin-left: 3px;
+      margin-right: 0;
+    }
+
+    &:first-child {
+      margin-left: 0;
+      margin-right: 3px;
+    }
+
+    &:first-child:last-child {
+      margin-left: 0;
+      margin-right: 0;
     }
   }
 
